--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 <script src="js/scripts.js"></script>
 <h1>My first Github page</h1>
+  <p>It's time for a gluten-free donut break</p> 
   
 </body>
 </html>
