--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 
   <title>My first page</title>
   
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="">
 
 </head>
 
 <body>
-<script src="js/scripts.js"></script>
+<script src=""></script>
 <h1>My first Github page</h1>
   <p>It's time for a gluten-free donut break</p> 
-  
+  <p>This change is being made on my computer</p>
+  <p>Why this is not working?</p>
+  <p>once again...</p>
 </body>
 </html>
