--- a/index.html
+++ b/index.html
@@ -3,19 +3,55 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>My first page</title>
-  
-  <link rel="stylesheet" href="">
-
+  <title>My first page about cherries</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 <script src=""></script>
-<h1>My first Github page</h1>
-  <p>It's time for a gluten-free donut break</p> 
-  <p>This change is being made on my computer</p>
-  <p>Why this is not working?</p>
-  <p>once again...</p>
+<header>
+<h1>My first website: Miriam in CIT230</h1>
+<h2>Miriam loves cherry trees ♥</h2>
+</header>
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="#">Information</a></li>
+<li><a href="#">Calendar</a></li>
+</ul>
+</nav>
+
+<main>
+<h1>Home</h1>
+<img src="images/cherry tree.jfif" alt="Photo of a Cherry Tree">
+<p>Drinking up the clouds
+  it spews out cherry blossoms –
+  Yoshino Mountain.
+  
+  Wind blows
+  they scatter and it dies
+  fallen petals
+  
+  Petals falling
+  unable to resist
+  the moonlight
+  
+  Sakura, sakura
+  they fall in the dreams
+  of sleeping beauty./Yosa Buson</p>
+  <p>Types of Cheery Trees</p>
+  <ol>
+    <li>Coral</li>
+    <li>Critalin</li>
+    <li>Rainier</li>
+    <li>Early Robin</li>
+    <li>Bing</li>
+    <li>Attika</li>
+  </ol>
+</main>
+<footer>
+&copy; Miriam Aguirre 2020
+</footer>
+
 </body>
 </html>
