background css color change

--- a/index.html
+++ b/index.html
@@ -24,17 +24,33 @@
 <main>
 <h1>Home</h1>
 <img src="images/cherry tree.jfif" alt="Photo of a Cherry Tree">
+<p>In 2014, world production of sweet cherries was 2.25 million tonnes, with Turkey producing 20% of this total. Other major producers of sweet cherries were the United States and Iran. World production of sour cherries in 2014 was 1.36 million tonnes, led by Russia, Ukraine, Turkey and Poland.
+
+  Middle East
+  
+  Ripe sweet cherries in Tehran
+  Major commercial cherry orchards in West Asia are in Turkey, Iran, Syria, Azerbaijan, Lebanon, and Israel.
+  
+  Europe
+  Major commercial cherry orchards in Europe are in Turkey, Italy, Spain and other Mediterranean regions, and to a smaller extent in the Baltic States and southern Scandinavia.
+  
+  In France since the 1920s, the first cherries of the season come in April/May from the region of Céret (Pyrénées-Orientales),[38] where the local producers send, as a tradition since 1932, the first crate of cherries to the president of the Republic.[39]
+  
+  North America
+  See also: Cherry production in Michigan
+  In the United States, most sweet cherries are grown in Washington, California, Oregon, Wisconsin, and Michigan.</p>
+
 <p>Drinking up the clouds
   it spews out cherry blossoms –
   Yoshino Mountain.
   
   Wind blows
   they scatter and it dies
-  fallen petals
-  
+  fallen petals.
+  <br>
   Petals falling
   unable to resist
-  the moonlight
+  the moonlight.
   
   Sakura, sakura
   they fall in the dreams
