resize of image

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </nav>
 
 <main>
-<h1>Home</h1>
-<img src="images/cherry tree.jfif" alt="Photo of a Cherry Tree">
+<h1>Information on Cherry Trees</h1>
+<img src="images/cherry tree.jpg" alt="Photo of a Cherry Tree">
 <p>In 2014, world production of sweet cherries was 2.25 million tonnes, with Turkey producing 20% of this total. Other major producers of sweet cherries were the United States and Iran. World production of sour cherries in 2014 was 1.36 million tonnes, led by Russia, Ukraine, Turkey and Poland.
 
   Middle East
