--- a/index.html
+++ b/index.html
@@ -1,73 +1,37 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>My first page about cherries</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-<script src=""></script>
-<header>
-<h1>My first website: Miriam in CIT230</h1>
-<h2>Miriam loves cherry trees ♥</h2>
-</header>
-<nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="#">Information</a></li>
-<li><a href="#">Calendar</a></li>
-</ul>
-</nav>
-
-<main>
-<h1>Information on Cherry Trees</h1>
-<img src="images/cherry tree.jpg" alt="Photo of a Cherry Tree">
-<p>In 2014, world production of sweet cherries was 2.25 million tonnes, with Turkey producing 20% of this total. Other major producers of sweet cherries were the United States and Iran. World production of sour cherries in 2014 was 1.36 million tonnes, led by Russia, Ukraine, Turkey and Poland.
-
-  Middle East
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Course Portal : Miriam</title>
+    <meta name="description" content="This is Miriam's home page">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
   
-  Ripe sweet cherries in Tehran
-  Major commercial cherry orchards in West Asia are in Turkey, Iran, Syria, Azerbaijan, Lebanon, and Israel.
-  
-  Europe
-  Major commercial cherry orchards in Europe are in Turkey, Italy, Spain and other Mediterranean regions, and to a smaller extent in the Baltic States and southern Scandinavia.
-  
-  In France since the 1920s, the first cherries of the season come in April/May from the region of Céret (Pyrénées-Orientales),[38] where the local producers send, as a tradition since 1932, the first crate of cherries to the president of the Republic.[39]
-  
-  North America
-  See also: Cherry production in Michigan
-  In the United States, most sweet cherries are grown in Washington, California, Oregon, Wisconsin, and Michigan.</p>
-
-<p>Drinking up the clouds
-  it spews out cherry blossoms –
-  Yoshino Mountain.
-  
-  Wind blows
-  they scatter and it dies
-  fallen petals.
-  <br>
-  Petals falling
-  unable to resist
-  the moonlight.
-  
-  Sakura, sakura
-  they fall in the dreams
-  of sleeping beauty./Yosa Buson</p>
-  <p>Types of Cheery Trees</p>
-  <ol>
-    <li>Coral</li>
-    <li>Critalin</li>
-    <li>Rainier</li>
-    <li>Early Robin</li>
-    <li>Bing</li>
-    <li>Attika</li>
-  </ol>
-</main>
-<footer>
-&copy; Miriam Aguirre 2020
-</footer>
-
-</body>
+  <body>
+ 
+    <div class="idcard">
+      <img src="images/miriamphoto-small.jpg" alt="Miriam small photo">
+    <header>
+      <h1>Miriam Aguirre</h1>
+      
+    </header>
+    <article class="middle">
+      <h3>CIT 230: Assignment Portal</h3>
+      <hr>
+      <ul>
+        <li>Lesson 02: <a href="#">Assignment Link</a></li>
+        <li>Lesson 03: <a href="#">Assignment Link</a></li>
+        <li>Lesson 04: <a href="#">Link</a>| <a href="#">Link</a></li>
+      </ul>
+    </article>
+    <footer>
+      <p>&#169;2020| Miriam Aguirre | Texas | <a href="https://www.byui.edu/online">BYUI Online Learning</a><br>
+          <script language="javascript"> document.write("Last updated: " + document.lastModified);</script></p>
+    </footer>
+    </div>
+    
+  </body>
 </html>
