--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Course Portal : Miriam</title>
+    <meta name="description" content="This is Miriam's home page">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  
+  <body>
+ 
+    <div class="idcard">
+      <img src="images/miriamphoto-small.jpg" alt="Miriam small photo">
+    <header>
+      <h1>Miriam Aguirre</h1>
+      
+    </header>
+    <article class="middle">
+      <h3>CIT 230: Assignment Portal</h3>
+      <hr>
+      <ul>
+        <li>Lesson 02: <a href="#">Assignment Link</a></li>
+        <li>Lesson 03: <a href="#">Assignment Link</a></li>
+        <li>Lesson 04: <a href="#">Link</a>| <a href="#">Link</a></li>
+      </ul>
+    </article>
+    <footer>
+      <p>&#169;2020| Miriam Aguirre | Texas | <a href="https://www.byui.edu/online">BYUI Online Learning</a><br>
+          <script language="javascript"> document.write("Last updated: " + document.lastModified);</script></p>
+    </footer>
+    </div>
+    
+  </body>
+</html>
 
