--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </article>
     <footer>
       <p>&#169;2020| Miriam Aguirre | Texas | <a href="https://www.byui.edu/online">BYUI Online Learning</a><br>
-          <script language="javascript"> document.write("Last updated: " + document.lastModified);</script></p>
+        <script src="js/currentdate.js" ></script> </p>
+        
     </footer>
     </div>
     
