--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </ul>
     </article>
     <footer>
-      <p>&#169;2020| Miriam Aguirre | Texas | <a href="https://www.byui.edu/online">BYUI Online Learning</a><br>
+      <p>&#169;2020| Miriam Aguirre | Texas | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a><br>
         <script src="js/currentdate.js"></script>
       </p>
 
