--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Course Portal : Miriam</title>
-  <meta name="description" content="This is Miriam's home page">
+  <meta name="description" content="This is Miriam's home page for the CIT230 Winter Semester assignments">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link href="css/style.css" rel="stylesheet">
