--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="This is Miriam's home page for the CIT230 Winter Semester assignments">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
