new ranch folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/small.css" rel="stylesheet">
+  <link href="css/medium.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <img src="images/miriamphoto-small.jpg" alt="Miriam small photo">
     <header>
       <h1>Miriam Aguirre</h1>
-
+ 
     </header>
     <article class="middle">
       <h3>CIT 230: Assignment Portal</h3>
