--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -13,6 +13,9 @@
 <link href="css/small.css" rel="stylesheet">
 <link href="css/medium.css" rel="stylesheet">
 <link href="css/large.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sail&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
