--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -15,6 +15,7 @@
 <link href="css/large.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Sail&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Unica+One&display=swap" rel="stylesheet">
 
 </head>
 
