--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       <h3>CIT 230: Assignment Portal</h3>
       <hr>
       <ul>
-        <li>Lesson 02: <a href="ranch/index.html">Ranch Page</a></li>
-        <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
+        <li>Lesson 02: <a href="ranch/index.html">Ranch Page | </a><a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03: <a href="#">Assignment Link</a></li>
         <li>Lesson 04: <a href="#">Link</a>| <a href="#">Link</a></li>
       </ul>
