--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -64,7 +64,7 @@
     
 <!-- FOOTER HERE -->   
     <footer>
-        &copy; 2020 &#9729; Miriam Aguirre &#9729; <script src="js/lastupdated.js"></script>
+        &copy; 2020 &#9729; Miriam Aguirre &#9729; <a href="#">Terms of Use</a> &#9729;<script src="js/todaydate.js"></script>
     </footer>
 
 </body>
