--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -61,9 +61,9 @@
     </main>
     
 <!-- FOOTER HERE -->   
-    <footer>
-        &copy; 2020 &#9729; Miriam Aguirre &#9729; <script src="js/lastupdated.js"></script>
-    </footer>
+<footer>
+    &copy; 2020 &#9729; Miriam Aguirre &#9729; <a href="#">Terms of Use</a> &#9729;<script src="js/todaydate.js"></script>
+</footer>
 
 </body>
 </html>
