--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -58,7 +58,7 @@
             It will also contain a section for weather related pictures, which the users can contribute to (with photos) and a page for storm
             updates.</p>        
         <h2>Site Map</h2>
-        <img src="images/sitemap.png" alt="domain">
+        <img src="images/sitemap.png" alt="site map">
 
     </main>
     
