--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -54,9 +54,15 @@
         <p>The domain name is available in google for the endings of .net. .org. info and .us at a cost of $12 dollars a year.</p>
         <img src="images/domain.jpg" alt="domain">
         <h2>Site Purpose</h2>
-        <p>The purpose of this website is to provide an accurate weather forecast for the cities of Preston, Soda Springs and Fish Heaven. 
+        <p>The purpose of this website is to provide an accurate weather forecast for the cities of Preston, Soda Springs and Fish Heaven with a corresponding image for each.
+            Each town weather pages contain weather conditions and other town information or relevant articles/content. All the images in the website will reflect the current 
+            weather condition data on the town pages and the towns themselves.
             It will also contain a section for weather related pictures, which the users can contribute to (with photos) and a page for storm
-            updates.</p>        
+            updates.</p> 
+
+        <h2>Wind Chill Factor Logo</h2>
+        <img class="windy" src="images/Windylogo.png" alt="windy logo">
+
         <h2>Site Map</h2>
         <img src="images/sitemap.png" alt="site map">
 
@@ -64,7 +70,7 @@
     
 <!-- FOOTER HERE -->   
     <footer>
-        &copy; 2020 &#9729; Miriam Aguirre &#9729; <a href="#">Terms of Use</a> &#9729;<script src="js/todaydate.js"></script>
+        &copy; 2020  &#9729;  Miriam Aguirre  &#9729;  <a href="#">Terms of Use</a>  &#9729; <script src="js/todaydate.js"></script>
     </footer>
 
 </body>
