--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -57,7 +57,7 @@
         <h2>Elements' Colors</h2>
         
         <p>This is what I plan to use for the main elements of the website. </p>
-        <img src="images/colorselements.JPG" alt="color elements">       
+        <img class="fontstable" src="images/colorselements.JPG" alt="color elements">       
         
 
     </main>
