--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -50,27 +50,39 @@
 <!-- CONTENT HERE -->
     <main>
         <h2>Target Audience</h2>
-        <p>The target audience for this site are people from 15 </p>
+        <p>The target audience for this site is people from 15 to 85 years old who live or are really interested in finding out the weather in these 
+            small towns of Idaho (Preston, Fish Heavens and Soda Springs). The primary language of the target audience is English, 
+            are comfortable with technology, and like to find quick answers on the Internet. 
+        </p>
         <h2>Persona 1</h2>
-        <p>bla bla</p>
-
+        <img class="persona" src="images/photo3.jpeg" alt="persona">
+        <p>Name: Edna Shell </p> 
+        <p>Age: Seventy Four </p>
+        <p>Occupation: Grandma/Loves to spend her days outdoors </p>
+        <p>Purpose of Visit: Wants to know when is the best time of the day to go out for walks with her dogs or go to the park with her grandchildren. </p>
+        <p>Device: Home Desktop</p>    
         <h2>Persona 2</h2>
-        <p>bla bla</p>   
-
+        <img class="persona" src="images/photo1.jpeg" alt="persona">
+        <p>Name: Hubert Foxglove </p> 
+        <p>Age: Thirty four </p>
+        <p>Occupation: Horticulturist</p>
+        <p>Purpose of Visit: Needs to check the humidity and temperature in order to care better for his flowers and herbs. </p>
+        <p>Device: Cellphone</p>
         <h2>Scenario 1</h2>
-        <p>blablabla</p>        
-
+        <p class="strong">What are the humidity levels today? </p>  
+        <p>Wind Chill Factor will tell you all the weather facts of the day. Just click on the city where you live and we'll have all the info you need in details and photos.</p>        
         <h2>Scenario 2</h2>
-        <p>blablabla</p> 
-
+        <p class="strong">Is today too hot to visit the park? or Should I wear a jacket?</p>  
+        <p>Are you unsure of how should you dress today? We've got your back! Just a quick visit to our site and we'll let you know. </p> 
         <h2>Scenario 3</h2>
-        <p>blablabla</p>  
-
+        <p class="strong">Should I cover my flowers today?</p>  
+        <p>Will it rain today? Will the wind be too strong for those delicate flowers? Snow? We can let you know how good or bad of a day is ahead of you.</p>
         <h2>Scenario 4</h2>
-        <p>blablabla</p>  
-
+        <p class="strong">From can kind of device can I access this site?</p>  
+        <p>Anyone can access our site from any device with an internet connection (cellphones, ipads, laptops), so don't limit your visits.</p>
         <h2>Scenario 5</h2>
-        <p>blablabla</p>  
+        <p class="strong">What's the weather going to be like this weekend?</p> 
+        <p>It doesn't matter what day of the week you need to make sure if you should take an umbrella or a jacket before stepping out of your house, so visit often at any time, we have the most current, updated weather information.</p>  
         
         
 
