--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -23,7 +23,8 @@
 <!-- enhance-desktop -->
 <link href="css/large.css" rel="stylesheet">
 <!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Lato|Prata&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
      
 </head>
 <body>
