Preston and Navigation pages

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -30,7 +30,7 @@
 <body>
 <!-- HEADER HERE -->
 	<header class="clearfix">
-<img src="images/Windylogo.png" alt="logo">	
+<img src="images/Windylogowstroke.png" alt="logo">	
  <h1>Wind Chill Factor</h1>
         <h2>We will let you know if you need a jacket</h2>
     </header>
