--- a/ranch/index.html
+++ b/ranch/index.html
@@ -35,7 +35,7 @@
     
     <h1>Events</h1>
     <figure>
-    <img src="images/cows.jpg" alt="Herford Cows">
+      <a href="/index.html"><img src="images/cows.jpg" alt="Herford Cows"></a>
     <figcaption>Herford Cows</figcaption>
     </figure>
 
