correction on date js

--- a/lesson4/preston.html
+++ b/lesson4/preston.html
@@ -64,7 +64,7 @@
 <!-- FOOTER HERE -->
 <div id="footerWrapper">  
     <footer>
-        &copy; 2020  &#9729;  Miriam Aguirre  &#9729;  <a href="#">Terms of Use</a>  &#9729; <script src="js/todaydate.js"></script>
+        &#9729;  &copy; 2020  | Miriam Aguirre | <script src="js/todaydate.js"></script>  &#9729;
     </footer>
 </div> 
 </body>
