--- a/lesson4/preston.html
+++ b/lesson4/preston.html
@@ -57,9 +57,14 @@
 <!-- CONTENT HERE -->
     <main>
         <h1>Preston</h1>        
-        <div><p>Hero and Weather summary</p> </div>
-        <div><p>Article and Image</p> </div>
-        <div><p>Contact us with address and map</p> </div>
+        <div><h2>Hero and Weather summary</h2>
+            <p>Hero and Weather summary</p></div>
+
+        <div><h2>Article and Image</h2>
+        <p>Article and Image</p> </div>
+        
+        <div><h2>Contact us with address and map</h2>
+        <p>Contact us with address and map</p> </div>
     </main>
     
 <!-- FOOTER HERE -->
