--- a/lesson4/preston.html
+++ b/lesson4/preston.html
@@ -56,13 +56,14 @@
     
 <!-- CONTENT HERE -->
     <main>
-        <h1>Preston</h1>        
+        <h1>Preston</h1>
+        <!----<img src="http://i.imgur.com/86hRE.jpg" alt="preston large image"> --->     
         <div><h2>Hero and Weather summary</h2>
             <p>Hero and Weather summary</p></div>
 
         <div><h2>Article and Image</h2>
         <p>Article and Image</p> </div>
-        
+
         <div><h2>Contact us with address and map</h2>
         <p>Contact us with address and map</p> </div>
     </main>
