--- a/lesson4/preston.html
+++ b/lesson4/preston.html
@@ -33,7 +33,7 @@
 <!-- HEADER HERE -->
 <div id="headerWrapper">
 	<header class="clearfix">
-        <img src="images/Windylogowstroke.png" alt="logo">	
+        <img src="images/Windylogowstroke.png" alt="logo windy cloud">	
         <h1>Wind Chill Factor</h1>
         <h2>We will let you know if you need a jacket</h2>
     </header>
