--- a/lesson4/preston.html
+++ b/lesson4/preston.html
@@ -26,7 +26,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
      
-<script type="text/javascript" src="js/responsiveMenu.js" defer></script>
+<script src="js/responsiveMenu.js" defer></script>
 
 </head>
 <body>
@@ -57,7 +57,7 @@
 <!-- CONTENT HERE -->
     <main>
         <h1>Preston</h1>
-        <!----<img src="http://i.imgur.com/86hRE.jpg" alt="preston large image"> --->     
+   
         <div><h2>Hero and Weather summary</h2>
             <p>Hero and Weather summary</p></div>
 
