--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li>Lesson 02: <a href="ranch/index.html">Ranch Page | </a><a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03: <a href="water_cycle">Water Cycle | </a><a href="lesson3">Design Planning</a></li>
         <li>Lesson 04: <a href="navigation/">Navigation Practice</a>| <a href="lesson4/preston.html">Preston Town</a></li>
+        <li>Lesson 05: <a href="lesson5/preston.html">Lesson 5</a></li>
       </ul>
     </article>
     <footer>
