--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -96,7 +96,7 @@
                         <img src="images/thunder.png" alt="forecastimg4"><br> High Temp &#8457; </td>
                     <td>
                         <img src="images/snow.png" alt="forecastimg5"><br> High Temp &#8457; </td>
-
+            </tbody>
         </table>
         </div>
         
