--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -123,7 +123,7 @@
                 </section>
                 <section class="phone-email">
                 <p><span class="strong">Phone:</span> 555-555-555</p>
-                <p><span class="strong">Email:</span>windchillfactor@mail.com </p>
+                <p><span class="strong">Email:</span>wcf@mail.com </p>
                 </section>
                 <section class="map"><iframe class="smallImgTxt2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.773853438026!2d-111.91534443111685!3d42.09974162639047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1580931166048!5m2!1sen!2sus" width="300" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe></section>
             </div>
