--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -85,15 +85,15 @@
             <tbody>
                 <tr>
                     <td>
-                        <img src="images/sunny.png" alt="forecastimg1"><br> High Temp 50&#8457;</td>
+                        <img src="images/sunny.png" alt="forecastimg1"><p>High Temp 50&#8457;</p> </td>
                     <td>
-                        <img src="images/almostsunny.png" alt="forecastimg2"><br> High Temp 49&#8457; </td>
+                        <img src="images/almostsunny.png" alt="forecastimg2"><p>High Temp 49&#8457;</p></td>
                     <td>
-                        <img src="images/rain.png" alt="forecastimg3"><br> High Temp 48&#8457; </td>
+                        <img src="images/rain.png" alt="forecastimg3"><p>High Temp 48&#8457;</p>  </td>
                     <td>
-                        <img src="images/thunder.png" alt="forecastimg4"><br> High Temp 47&#8457; </td>
+                        <img src="images/thunder.png" alt="forecastimg4"><p>High Temp 47&#8457;</p>  </td>
                     <td>
-                        <img src="images/snow.png" alt="forecastimg5"><br> High Temp 46&#8457; </td>
+                        <img src="images/snow.png" alt="forecastimg5"><p>High Temp 46&#8457;</p> </td>
             </tbody>
         </table>
         </div>
@@ -123,13 +123,13 @@
             <h2>Contact Us</h2>
             <div class="contactusbox">                  
                 <section class="address">
-                <p><span class="strong">Address:</span>WCF Headquaters <br> 664-666 Freehill Rd, <br>Preston, ID 83263</p>
+                <h3>Address:</h3><p>WCF Headquaters <br> 664-666 Freehill Rd, <br>Preston, ID 83263</p>
                 </section>
                 <section class="phone-email">
-                <p><span class="strong">Phone:</span> 555-555-555</p>
-                <p><span class="strong">Email:</span>wcf@mail.com </p>
+                <p><h3>Phone:</h3> <p>555-555-555</p>
+                <p><h3>Email:</h3><p>wcf@mail.com </p>
                 </section>
-                <section class="map"><iframe class="smallImgTxt2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.773853438026!2d-111.91534443111685!3d42.09974162639047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1580931166048!5m2!1sen!2sus" width="300" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe></section>
+                <section class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.773853438026!2d-111.91534443111685!3d42.09974162639047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1580931166048!5m2!1sen!2sus" width="300" height="200" style="border:0;" allowfullscreen=""></iframe></section>            
             </div>
          </div>      
     </main>
