--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Course Portal : Miriam</title>
   <meta name="description" content="This is Miriam's home page for the CIT230 Winter Semester assignments">
-  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash&display=swap" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash&display=swap" rel="stylesheet">-->
   <link rel="stylesheet" href="css/normalize.css">
   <link href="css/small.css" rel="stylesheet">
   <link href="css/medium.css" rel="stylesheet">
@@ -35,7 +35,8 @@
       <p>&#169;2020| Miriam Aguirre | Texas | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a><br>
         <script src="js/currentdate.js"></script>
       </p>
-
+      <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+      <script src="js/webfontload.js"></script>
     </footer>
   </div>
 
