--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li>Lesson 03: <a href="water_cycle">Water Cycle | </a><a href="lesson3">Design Planning</a></li>
         <li>Lesson 04: <a href="navigation/">Navigation Practice</a>| <a href="lesson4/preston.html">Preston Town</a></li>
         <li>Lesson 05: <a href="lesson5/preston.html">Lesson 5</a></li>
+        <li>Lesson 06: <a href="lesson6/preston.html">Responsive Images and Font</a></li>
       </ul>
     </article>
     <footer>
