--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
       <h3>CIT 230: Assignment Portal</h3>
       <hr>
       <ul>
-        <li>Lesson 02: <a href="ranch/index.html">Ranch Page | </a><a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Lesson 03: <a href="water_cycle">Water Cycle | </a><a href="lesson3">Design Planning</a></li>
-        <li>Lesson 04: <a href="navigation/">Navigation Practice</a>| <a href="lesson4/preston.html">Preston Town</a></li>
+        <li>Lesson 02: <a href="ranch/index.html">Ranch Page</a> | <a href="lesson2/design-principles.html">Design Principles</a></li>
+        <li>Lesson 03: <a href="water_cycle">Water Cycle</a> | <a href="lesson3">Design Planning</a></li>
+        <li>Lesson 04: <a href="navigation/">Navigation Practice</a> | <a href="lesson4/preston.html">Preston Town</a></li>
         <li>Lesson 05: <a href="lesson5/preston.html">Lesson 5</a></li>
         <li>Lesson 06: <a href="lesson6/preston.html">Responsive Images and Font</a></li>
+        <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading</a> | <a href="lesson7/gallery.html">Gallery</a></li>
       </ul>
     </article>
     <footer>
