--- a/lesson7/preston.html
+++ b/lesson7/preston.html
@@ -49,7 +49,7 @@
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Heaven</a></li>            
             <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
 </div>    
