--- a/lesson7/gallery.html
+++ b/lesson7/gallery.html
@@ -64,7 +64,7 @@
             <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/tornado2.jpg" alt="photo tornado2"><span class="photocap">rotating column of air</span></picture>
             <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/tornado3.jpg" alt="photo tornado3"><span class="photocap">extending from a thunderstorm</span></picture>
             <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/tornado4.jpg" alt="photo tornado4"><span class="photocap">to the ground.</span></picture>
-            <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/tornado5.jpg" alt="photo tornado5"><span class="photocap">Tornados can reach</span></picture>
+            <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/tornado5.jpg" alt="photo tornado5"><span class="photocap">Tornadoes can reach</span></picture>
             <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/tornado6.jpg" alt="photo tornado6"><span class="photocap">wind speeds of up to 300 mph.</span></picture>
             <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/tornado7.jpg" alt="photo tornado7"><span class="photocap">Most tornadoes form from thunderstorms.</span></picture>
             <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/tornado8.jpg" alt="photo tornado8"><span class="photocap">Tornadoes form when warm, moist air</span></picture>
