placeholder img text

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -41,12 +41,12 @@
         <h1>Progressive Loading Images - Lazy Loading</h1>
         
         <div class="lazy-gridcontainer">
-            <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/bird1.jpg" alt="photo bird1"></picture>
-            <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/bird2.jpg" alt="photo bird2"></picture>
-            <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/bird3.jpg" alt="photo bird3"></picture>
-            <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/bird4.jpg" alt="photo bird4"></picture>
-            <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/bird5.jpg" alt="photo bird5"></picture>
-            <picture><img src="https://via.placeholder.com/300x400.png" data-src="images/bird6.jpg" alt="photo bird6"></picture>
+            <picture><img src="images/placeholder.jpg" data-src="images/bird1.jpg" alt="photo bird1"></picture>
+            <picture><img src="images/placeholder.jpg" data-src="images/bird2.jpg" alt="photo bird2"></picture>
+            <picture><img src="images/placeholder.jpg" data-src="images/bird3.jpg" alt="photo bird3"></picture>
+            <picture><img src="images/placeholder.jpg" data-src="images/bird4.jpg" alt="photo bird4"></picture>
+            <picture><img src="images/placeholder.jpg" data-src="images/bird5.jpg" alt="photo bird5"></picture>
+            <picture><img src="images/placeholder.jpg" data-src="images/bird6.jpg" alt="photo bird6"></picture>
         </div>
 
     </main>
