--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Wind Chill Factor Weather Website">
+<meta name="description" content="Lazy Loading Practice">
 <meta name="author" content="Miriam Aguirre">
 
 <!-- This start file was build by Miriam Aguirre  -->
-<title>Wind Chill Factor: LazyLoad</title>
+<title>Pretty Birds: LazyLoad</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -20,10 +20,10 @@
 <link href="css/lazyload-small.css" rel="stylesheet">
 
 <!-- fonts -->
-<!--<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">-->
+<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
 <link rel="icon" href="/lesson4/images/favicon.ico" type="image/x-icon">     
-<script src="js/responsiveMenu.js" defer></script>
+
 
 </head>
 <body>
@@ -60,8 +60,7 @@
         </footer>
         
     </div> 
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="js/webfontload.js"></script>
+
     <script src="js/imagehandling.js"></script>
 
 </body>
