--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -3,20 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="description" content="Lazy Loading Practice">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Miriam Aguirre">
 
 <!-- This start file was build by Miriam Aguirre  -->
 <title>Pretty Birds: LazyLoad</title>
 
-<!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-
-
-
-<!-- STYLE SHEETS -->
-<link href="css/normalize.css" rel="stylesheet">
-<!-- phone-default -->
 <link href="css/lazyload-small.css" rel="stylesheet">
 
 <!-- fonts -->
@@ -28,10 +21,10 @@
 </head>
 <body>
 <!-- HEADER HERE -->
-<div id="headerWrapper">
+<header>
         <h3>🐦 Here are some pretty birds &#128038;</h3>
-    </header>
-</div>    
+</header>
+
     
    
     
