--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <meta name="description" content="Lazy Loading Practice">
 <meta name="author" content="Miriam Aguirre">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- This start file was build by Miriam Aguirre  -->
 <title>Pretty Birds: LazyLoad</title>
 
-
+<link href="css/normalize.css" rel="stylesheet">
 <link href="css/lazyload-small.css" rel="stylesheet">
 
 <!-- fonts -->
