--- a/lesson7/gallery.html
+++ b/lesson7/gallery.html
@@ -60,7 +60,7 @@
         <h1>Weather Gallery:Tornadoes</h1>
         <div class="gallery-gridcontainer">
             
-            <picture><img src="images/placeholder.jpg" data-src="images/tornado1.jpg" alt="photo tornado1"><div class="photocap">A tornado is a violent</div></picture>
+            <picture><img src="images/placeholder.jpg" data-src="images/tornado1.jpg" alt="photo tornado1"><span class="photocap">A tornado is a violent</span></picture>
             <picture><img src="images/placeholder.jpg" data-src="images/tornado2.jpg" alt="photo tornado2"><span class="photocap">rotating column of air</span></picture>
             <picture><img src="images/placeholder.jpg" data-src="images/tornado3.jpg" alt="photo tornado3"><span class="photocap">extending from a thunderstorm</span></picture>
             <picture><img src="images/placeholder.jpg" data-src="images/tornado4.jpg" alt="photo tornado4"><span class="photocap">to the ground.</span></picture>
