--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li>Lesson 05: <a href="lesson5/preston.html">Lesson 5</a></li>
         <li>Lesson 06: <a href="lesson6/preston.html">Responsive Images and Font</a></li>
         <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading</a> | <a href="lesson7/gallery.html">Gallery</a></li>
+        <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Acme</a> | <a href="lesson8/stormcenter.html">Storm Center</a></li>
       </ul>
     </article>
     <footer>
