--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -80,7 +80,7 @@
                 <div>Storm Date</div>
                 <label class="sbs"><input type="date" name="stormdate"></label>
                 
-                <label class="top">Storm Type
+                <label class="top">Storm Type</label>
                 <select name="stormtype">
                         <option value="" selected disabled>Please Select &#9662;</option>
                         <option value="Flash Flood"></option>
@@ -90,7 +90,7 @@
                         <option value="Tornado"></option>
                 </select>
                 </label>
-                <label class="top">Storm Region
+                <label class="top">Storm Region</label>
                     <select name="region">
                         <option value="" selected disabled>Select Region &#9662;</option>
                         <option value="haven">Fish Haven</option>
@@ -123,9 +123,9 @@
             <fieldset>
                 <legend>User in-danger Level</legend>
 
-                <label class="sbs"><input type="radio" name="audience" value="Yes">  Yes</label>
-                <label class="sbs"><input type="radio" name="audience" value="Maybe">  Maybe</label>
-                <label class="sbs"><input type="radio" name="audience" value="No">  No</label>
+                <label class="sbs"><input type="radio" name="answer" value="Yes">  Yes</label>
+                <label class="sbs"><input type="radio" name="answer" value="Maybe">  Maybe</label>
+                <label class="sbs"><input type="radio" name="answer" value="No">  No</label>
    
                
             </fieldset>
