--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -82,7 +82,7 @@
                 
                 <label class="top">Storm Type</label>
                 <select name="stormtype">
-                        <option value="" selected disabled>Please Select &#9662;</option>
+                        <option value="" selected disabled>Please Select </option>
                         <option value="Flash Flood"></option>
                         <option value="Hail"></option>
                         <option value="Hurricane"></option>
@@ -92,7 +92,7 @@
                 </label>
                 <label class="top">Storm Region</label>
                     <select name="region">
-                        <option value="" selected disabled>Select Region &#9662;</option>
+                        <option value="" selected disabled>Select Region </option>
                         <option value="haven">Fish Haven</option>
                         <option value="preston">Preston</option>
                         <option value="soda">Soda Springs</option>
