--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -77,22 +77,21 @@
 
             <fieldset>
                 <legend>Weather Information</legend>
-                <div>Storm Date</div>
-                <label class="sbs"><input type="date" name="stormdate"></label>
                 
-                <label class="top">Storm Type</label>
-                <select name="stormtype">
-                        <option value="" selected disabled>Please Select </option>
-                        <option value="Flash Flood"></option>
-                        <option value="Hail"></option>
-                        <option value="Hurricane"></option>
-                        <option value="Thunderstorm"></option>
-                        <option value="Tornado"></option>
-                </select>
-                </label>
-                <label class="top">Storm Region</label>
+                <label class="top">Storm Date<input type="date" name="stormDate"></label>
+                
+                <label class="top">Storm Type<input list="stormlist" name="stormType"></label>
+			    <datalist id="stormlist">
+				<option value="Flash Flood">
+				<option value="Hail">
+				<option value="Hurricane">
+				<option value="Thunderstorm">
+				<option value="Tornado">
+			    </datalist>
+
+                <label class="top">Storm Region
                     <select name="region">
-                        <option value="" selected disabled>Select Region </option>
+                        <option value="" selected disabled>Select Region &#9662;</option>
                         <option value="haven">Fish Haven</option>
                         <option value="preston">Preston</option>
                         <option value="soda">Soda Springs</option>
