--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -131,7 +131,9 @@
 
             <fieldset>
                 <legend>Additional Information</legend>
-                <textarea placeholder="Type in here your comments"></textarea>
+                <label>
+                <textarea placeholder="Type in here your comments" rows="5" cols="40"></textarea>
+                </label>
             </fieldset>
             <input type="submit" value="Send my weather report" class="submitBtn">
         </form>
