--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -131,7 +131,7 @@
 
             <fieldset>
                 <legend>Additional Information</legend>
-                <label>
+                <label class="sbs"> 
                 <textarea placeholder="Type in here your comments" rows="5" cols="40"></textarea>
                 </label>
             </fieldset>
