--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -64,7 +64,7 @@
 <!-- CONTENT HERE -->
     <main>
         <h2>Report a storm or unusual weather event in your area</h2>       
-        <form method="get" action="thanks.html">
+        <form method="get" action="thanks.html" title="storm center form">
             <fieldset>
                 
                 <legend>Personal Information</legend>
@@ -131,9 +131,9 @@
 
             <fieldset>
                 <legend>Additional Information</legend>
-                <label class="sbs"> 
+
                 <textarea placeholder="Type in here your comments" rows="5" cols="40"></textarea>
-                </label>
+               
             </fieldset>
             <input type="submit" value="Send my weather report" class="submitBtn">
         </form>
