--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -1,33 +1,33 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="description" content="Wind Chill Factor Weather Website">
-<meta name="author" content="Miriam Aguirre">
+    <meta charset="utf-8">
+    <meta name="description" content="Wind Chill Factor Weather Website">
+    <meta name="author" content="Miriam Aguirre">
 
-<!-- This start file was build by Miriam Aguirre  -->
-<title>Wind Chill Factor: Storm Center</title>
+    <!-- This start file was build by Miriam Aguirre  -->
+    <title>Wind Chill Factor: Storm Center</title>
 
-<!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
+    <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 
-<!-- STYLE SHEETS -->
-<link href="css/normalize.css" rel="stylesheet">
-<!-- phone-default -->
-<link href="css/small.css" rel="stylesheet">
-<!-- enhance-tablet -->
-<link href="css/medium.css" rel="stylesheet">
-<!-- enhance-desktop -->
-<link href="css/large.css" rel="stylesheet">
-<!-- fonts -->
-<!--<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">-->
-<link rel="icon" href="/lesson8/images/favicon.ico" type="image/x-icon">
 
-<script src="js/responsiveMenu.js" defer></script>
+
+    <!-- STYLE SHEETS -->
+    <link href="css/normalize.css" rel="stylesheet">
+    <!-- phone-default -->
+    <link href="css/small.css" rel="stylesheet">
+    <!-- enhance-tablet -->
+    <link href="css/medium.css" rel="stylesheet">
+    <!-- enhance-desktop -->
+    <link href="css/large.css" rel="stylesheet">
+    <!-- fonts -->
+    <!--<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">-->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    <script src="js/responsiveMenu.js" defer></script>
 
 </head>
 <body>
