--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -125,9 +125,10 @@
 
             <fieldset>
                 <legend>Additional Information</legend>
-
-                <textarea placeholder="Type in here your comments" rows="5" cols="40"></textarea>
-               
+                <label class="comments">Share with us anything you wish to add...
+                <textarea placeholder="Type in here..." rows="5" cols="40"></textarea>
+                
+                </label>
             </fieldset>
             <input type="submit" value="Send my weather report" class="submitBtn">
         </form>
