missing label tag

--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -72,7 +72,7 @@
             <fieldset>
                 <legend>Weather Information</legend>
                 
-                <label class="top">Storm Date<input type="date" name="stormDate"></label>
+                <label class="top">Storm Date<input type="date" name="stormdate"></label>
                 
                 <label class="top">Storm Type
                     <select name="stormType">
@@ -83,6 +83,7 @@
                         <option value="thunderstorm">Thunder Storm</option>
                         <option value="tornado">Tornado</option>
                     </select>
+                </label>
 
                 <label class="top">Storm Region
                     <select name="region">
