--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -116,7 +116,7 @@
             </fieldset>
 
             <fieldset>
-                <legend>User in-danger Level</legend>
+                <legend>Danger Level</legend>
 
                 <label class="sbs"><input type="radio" name="answer" value="Yes">  Yes</label>
                 <label class="sbs"><input type="radio" name="answer" value="Maybe">  Maybe</label>
@@ -128,7 +128,7 @@
             <fieldset>
                 <legend>Additional Information</legend>
                 <label class="comments">Share with us anything you wish to add...
-                <textarea placeholder="Type in here..." rows="5" cols="40"></textarea>
+                <textarea placeholder="Type in here..." rows="5" cols="45"></textarea>
                 
                 </label>
             </fieldset>
